# desk-fcobs

./: .gitignore  Cargo.toml  README.md  flake.nix  platformio.ini
ledc/: Cargo.toml  shell.nix
ledc/src/: config.rs  main.rs  ui.rs  update.rs
ledfw/: Cargo.toml
src/: main.cpp
