[package]
name = "ledc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
app_dirs2 = "2.5.5"
bincode = "1.3.3"
ctrlc = "3.2.2"
eframe = "0.19.0"
serde = { version = "1.0", features = [ "derive" ] }
serialport = "4.2.0"
